Update Localization, Add Spanish

--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -2208,4 +2208,427 @@
   <data name="WITH DIRECTION" xml:space="preserve">
     <value>Mit Richtung</value>
   </data>
+  <data name="HIGH SPEED" xml:space="preserve">
+    <value>Schnelle Geschwindigkeit</value>
+  </data>
+  <data name="LOW SPEED" xml:space="preserve">
+    <value>Langsame Geschwindigkeit</value>
+  </data>
+  <data name="MENU" xml:space="preserve">
+    <value>Speisekarte</value>
+  </data>
+  <data name="MORE" xml:space="preserve">
+    <value>Mehr</value>
+  </data>
+  <data name="CHANGE LANGUAGE" xml:space="preserve">
+    <value>Sprache ändern</value>
+  </data>
+  <data name="SWITCH THEME" xml:space="preserve">
+    <value>Thema wechseln</value>
+  </data>
+  <data name="SWITCH DEVICE NAMES" xml:space="preserve">
+    <value>Gerätenamen wechseln</value>
+  </data>
+  <data name="DEBUG WINDOW" xml:space="preserve">
+    <value>Debug-Fenster</value>
+  </data>
+  <data name="MINIMIZE PREVU" xml:space="preserve">
+    <value>Prevu minimieren</value>
+  </data>
+  <data name="CLOSE PREVU" xml:space="preserve">
+    <value>Schließen Sie Zurück</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Das folgende Bild überschreiben?</value>
+  </data>
+  <data name="SELECTED VALUES" xml:space="preserve">
+    <value>Ausgewählte Werte</value>
+  </data>
+  <data name="DIFFERENT VALUES" xml:space="preserve">
+    <value>Verschiedene Werte</value>
+  </data>
+  <data name="SAVE AS" xml:space="preserve">
+    <value>Speichern als</value>
+  </data>
+  <data name="LOAD IMAGE" xml:space="preserve">
+    <value>Bild laden</value>
+  </data>
+  <data name="OPEN PROCESS IMAGE" xml:space="preserve">
+    <value>Prozessabbild öffnen</value>
+  </data>
+  <data name="NO PARAMETERS FOUND WITH ACTIVE FILTERS" xml:space="preserve">
+    <value>Keine Parameter mit aktiven Filtern gefunden</value>
+  </data>
+  <data name="COLLAPSE ALL" xml:space="preserve">
+    <value>Alle reduzieren</value>
+  </data>
+  <data name="TIMES" xml:space="preserve">
+    <value>Mal</value>
+  </data>
+  <data name="FAILED TO SEND COMMAND. PLC NOT CONNECTED" xml:space="preserve">
+    <value>Befehl konnte nicht gesendet werden. SPS nicht verbunden</value>
+  </data>
+  <data name="ON COMMAND" xml:space="preserve">
+    <value>Auf Befehl</value>
+  </data>
+  <data name="WASHING" xml:space="preserve">
+    <value>Waschen</value>
+  </data>
+  <data name="(1=COOLING ON)" xml:space="preserve">
+    <value>(1=Kühlung ein)</value>
+  </data>
+  <data name="MOTORNOMINALPOWER" xml:space="preserve">
+    <value>Motornennleistung</value>
+  </data>
+  <data name="MOTORNOMINALCURRENT" xml:space="preserve">
+    <value>Motornennstrom</value>
+  </data>
+  <data name="INVERTERNOMINALOUTCURRENT" xml:space="preserve">
+    <value>Wechselrichternennausgangsstrom</value>
+  </data>
+  <data name="INVERTERBRAND" xml:space="preserve">
+    <value>Wechselrichtermarke</value>
+  </data>
+  <data name="MAIN FEEDING BELT" xml:space="preserve">
+    <value>Hauptfütterungsband</value>
+  </data>
+  <data name="USAGE" xml:space="preserve">
+    <value>Verwendungszweck</value>
+  </data>
+  <data name="HOURS" xml:space="preserve">
+    <value>Std</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK OR INVERTER IN LOCAL MODE)" xml:space="preserve">
+    <value>Fehlerhafter Status (Wechselrichter läuft nicht in Ordnung oder Wechselrichter im lokalen Modus)</value>
+  </data>
+  <data name="COOLING FAN OVERLOAD" xml:space="preserve">
+    <value>Überlastung des Kühlgebläses</value>
+  </data>
+  <data name="YOU HAVE UNSAVED CHANGES" xml:space="preserve">
+    <value>Du hast nicht gespeicherte Änderungen</value>
+  </data>
+  <data name="WHAT DO YOU WANT TO DO?" xml:space="preserve">
+    <value>Was möchten Sie tun?</value>
+  </data>
+  <data name="DISCARD CHANGES" xml:space="preserve">
+    <value>Änderungen verwerfen</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON PRESSED" xml:space="preserve">
+    <value>E-Stop-Taster gedrückt</value>
+  </data>
+  <data name="SUBZONE IN AUTOMATIC MODE" xml:space="preserve">
+    <value>Nebenzone im automatischen Modus</value>
+  </data>
+  <data name="SUBZONE IN MAINTENANCE MODE" xml:space="preserve">
+    <value>Nebenzone im Wartungsmodus</value>
+  </data>
+  <data name="SUBZONE IN DISABLED MODE" xml:space="preserve">
+    <value>Nebenzone im deaktivierten Modus</value>
+  </data>
+  <data name="SUBZONE IN E-STOP MODE" xml:space="preserve">
+    <value>Nebenzone im E-Stop-Modus</value>
+  </data>
+  <data name="DISABLING" xml:space="preserve">
+    <value>Deaktivieren</value>
+  </data>
+  <data name="SEMIAUTO" xml:space="preserve">
+    <value>Semi-automatisch</value>
+  </data>
+  <data name="OIL VALVE" xml:space="preserve">
+    <value>Ölventil</value>
+  </data>
+  <data name="DEBALER BRT STANDARD INTERFACE" xml:space="preserve">
+    <value>Entballer Brt Standardschnittstelle</value>
+  </data>
+  <data name="PELLENC BOTTLE SORTER" xml:space="preserve">
+    <value>Pellenc Flaschensortierer</value>
+  </data>
+  <data name="DOWNSTREAM EXTERNAL MACHINE" xml:space="preserve">
+    <value>Nachgeschaltete externe Maschine</value>
+  </data>
+  <data name="BELT" xml:space="preserve">
+    <value>Gürtel</value>
+  </data>
+  <data name="MANUAL SORTING" xml:space="preserve">
+    <value>Manuelle Sortierung</value>
+  </data>
+  <data name="EXTERNAL GRINDER" xml:space="preserve">
+    <value>Externe Mühle</value>
+  </data>
+  <data name="WATCHDOG" xml:space="preserve">
+    <value>Wachhund</value>
+  </data>
+  <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
+    <value>Inkrementeller Wd-Zähler (+1 alle 100 Ms – Rollover bei 30000)</value>
+  </data>
+  <data name="TRUE= AT LEAST ONE I/O MODULE CONNECTION DETECTED, 0 =SIMULATION ALLOWED" xml:space="preserve">
+    <value>True = Mindestens eine E/A-Modulverbindung erkannt, 0 = Simulation zulässig</value>
+  </data>
+  <data name="PLC PROGRAM SIMULATION ACTIVE" xml:space="preserve">
+    <value>SPS-Programmsimulation aktiv</value>
+  </data>
+  <data name="CABINET TEST ACTIVE" xml:space="preserve">
+    <value>Schranktest aktiv</value>
+  </data>
+  <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
+    <value>Estop-Bereich nicht zurückgesetzt (mit allen Estop-Pbs in Ordnung)</value>
+  </data>
+  <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Hauptrelaisstatus</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>OK für Prozess (Status des Stoppbereichs OK + keine Alarme/Meldungen)</value>
+  </data>
+  <data name="ALL AREA ESTOP PUSH BUTTON NOT PRESSED ( TRUE=OK)" xml:space="preserve">
+    <value>All Area Estop Push Button Not Pressed (True=Ok)</value>
+  </data>
+  <data name="ALARM PRESENT" xml:space="preserve">
+    <value>Alarm vorhanden</value>
+  </data>
+  <data name="NON-CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Nicht kritischer Alarm vorhanden</value>
+  </data>
+  <data name="MESSAGE PRESENT" xml:space="preserve">
+    <value>Nachricht vorhanden</value>
+  </data>
+  <data name="NEW ALARM PRESENT" xml:space="preserve">
+    <value>Neuer Alarm vorhanden</value>
+  </data>
+  <data name="EMERGENCY STOP RELAY RESET OK (DIRECT) (OF THIS ESTOP AREA)" xml:space="preserve">
+    <value>Not-Aus-Relais-Reset OK (direkt) (dieses Haltebereichs)</value>
+  </data>
+  <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
+    <value>Sys - Digitale Eingänge</value>
+  </data>
+  <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
+    <value>Sys - Digitale Ausgänge</value>
+  </data>
+  <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - Interne Geräte</value>
+  </data>
+  <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - Externe Geräte</value>
+  </data>
+  <data name="ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Ethernet-Switch in Ordnung</value>
+  </data>
+  <data name="DIGITAL INPUTS OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>Digitale Eingänge Ok (Wenn False --&gt; Estop Down)</value>
+  </data>
+  <data name="DIGITAL OUTPUTS OK" xml:space="preserve">
+    <value>Digitale Ausgänge Ok</value>
+  </data>
+  <data name="24 VOLTS INTERNAL OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>24 Volt intern OK (wenn falsch --&gt; Estop Down)</value>
+  </data>
+  <data name="24 VOLTS EXTERNAL OK" xml:space="preserve">
+    <value>24 Volt Extern Ok</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok für Prozess (Estop Ok + keine Alarme/Meldungen)</value>
+  </data>
+  <data name="ESTOP PRESSED (ON HMI)" xml:space="preserve">
+    <value>Stopp gedrückt (auf Hmi)</value>
+  </data>
+  <data name="OK FOR PROCESS (EPB OK)" xml:space="preserve">
+    <value>Ok für Prozess (Epb Ok)</value>
+  </data>
+  <data name="PULL-CORD SAFETIES" xml:space="preserve">
+    <value>Zugschnursicherungen</value>
+  </data>
+  <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
+    <value>Lokale Trennung OK (falls vorhanden)</value>
+  </data>
+  <data name="LOCAL SAFETY OK   (IF ANY - E.G. STRAP L.S.)" xml:space="preserve">
+    <value>Lokale Sicherheit OK (falls vorhanden – z. B. Strap L.S.)</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (0=SHOW START PB)" xml:space="preserve">
+    <value>Start-Button auf Hmi ausblenden (0=Start-Pb anzeigen)</value>
+  </data>
+  <data name="COMPONENT ENABLED (NO MANUAL START REQUIRED)" xml:space="preserve">
+    <value>Komponente aktiviert (kein manueller Start erforderlich)</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS" xml:space="preserve">
+    <value>Warten auf Prozessbedingungen</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
+    <value>Warten auf Start der Prozessbedingungen</value>
+  </data>
+  <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
+    <value>Warten auf das Ende der Evakuierungszeit</value>
+  </data>
+  <data name="ON TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Pünktlich ist auf Null gesetzt</value>
+  </data>
+  <data name="COMMAND GREASE ON" xml:space="preserve">
+    <value>Befehl Grease On</value>
+  </data>
+  <data name="READY TO START" xml:space="preserve">
+    <value>Bereit zum Start</value>
+  </data>
+  <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
+    <value>Vollständig ausgeführt (OK für Prozess)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Kritischer Alarm vorhanden</value>
+  </data>
+  <data name="DEBALER IN AUTO" xml:space="preserve">
+    <value>Entballer im Auto</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO (EXTERNAL PLANT)" xml:space="preserve">
+    <value>Entballer nicht in Auto (externe Anlage)</value>
+  </data>
+  <data name="DEBALER FAULTY STATUS" xml:space="preserve">
+    <value>Deballer-Fehlerstatus</value>
+  </data>
+  <data name="DEBALER NOT RUNNING" xml:space="preserve">
+    <value>Entballer läuft nicht</value>
+  </data>
+  <data name="DEBALER STARTED AND ACTIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Entballer gestartet und aktiv (externes Signal)</value>
+  </data>
+  <data name="EXTERNAL INPUT" xml:space="preserve">
+    <value>Externe Eingabe</value>
+  </data>
+  <data name="(1=STARTED AND ACTIVE)" xml:space="preserve">
+    <value>(1=Gestartet und aktiv)</value>
+  </data>
+  <data name="DEBALER IN AUTO MODE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Entballer im Auto-Modus (externes Signal)</value>
+  </data>
+  <data name="DEBALER STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Entballerstatus OK (externes Signal)</value>
+  </data>
+  <data name="(1=NO FAULTS)" xml:space="preserve">
+    <value>(1=Keine Fehler)</value>
+  </data>
+  <data name="DEBALER START REQUEST" xml:space="preserve">
+    <value>Entballer-Startanforderung</value>
+  </data>
+  <data name="EXTERNAL OUTPUT" xml:space="preserve">
+    <value>Externer Ausgang</value>
+  </data>
+  <data name="(1=START REQUEST)" xml:space="preserve">
+    <value>(1=Anfrage starten)</value>
+  </data>
+  <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
+    <value>Entballer-Startanforderung bestätigen</value>
+  </data>
+  <data name="(1=CONFIRM START)" xml:space="preserve">
+    <value>(1=Start bestätigen)</value>
+  </data>
+  <data name="DEBALER AUTO MODE REQUEST" xml:space="preserve">
+    <value>Anforderung für automatischen Modus der Entballenpresse</value>
+  </data>
+  <data name="(1=REQUEST AUTO MODE)" xml:space="preserve">
+    <value>(1=Auto-Modus anfordern)</value>
+  </data>
+  <data name="CONTROL" xml:space="preserve">
+    <value>Kontrolle</value>
+  </data>
+  <data name="SORTING UNIT DISABLED FOR PRODUCTION" xml:space="preserve">
+    <value>Sortiereinheit für Produktion deaktiviert</value>
+  </data>
+  <data name="SORTER WARNING PRESENT" xml:space="preserve">
+    <value>Sorter-Warnung vorhanden</value>
+  </data>
+  <data name="SORTING UNIT NOT SORTING OK" xml:space="preserve">
+    <value>Sortiereinheit sortiert nicht OK</value>
+  </data>
+  <data name="SORTING UNIT  CONTROL ALARM" xml:space="preserve">
+    <value>Steuerungsalarm der Sortiereinheit</value>
+  </data>
+  <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
+    <value>Sortiereinheit im lokalen Modus steuern</value>
+  </data>
+  <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
+    <value>Sortiereinheit nicht eingeschaltet Ok</value>
+  </data>
+  <data name="SORTING UNIT - LOCAL ESTOP PUSHBUTTON NOT RESET (STOP BELT)" xml:space="preserve">
+    <value>Sortiereinheit – Lokale Stopp-Drucktaste nicht zurückgesetzt (Band stoppen)</value>
+  </data>
+  <data name="SORTING" xml:space="preserve">
+    <value>Sortierung</value>
+  </data>
+  <data name="SORTING IN PROGRESS" xml:space="preserve">
+    <value>Sortierung läuft</value>
+  </data>
+  <data name="(1=SORTING)" xml:space="preserve">
+    <value>(1=Sortierung)</value>
+  </data>
+  <data name="SORTING STANDBY" xml:space="preserve">
+    <value>Standby sortieren</value>
+  </data>
+  <data name="(1=STANDBY)" xml:space="preserve">
+    <value>(1=Standby)</value>
+  </data>
+  <data name="NO FAULTS" xml:space="preserve">
+    <value>Keine Fehler</value>
+  </data>
+  <data name="SORTER NO FAULTS" xml:space="preserve">
+    <value>Sorter Keine Fehler</value>
+  </data>
+  <data name="WARNING PRESENT" xml:space="preserve">
+    <value>Warnung vorhanden</value>
+  </data>
+  <data name="SORTER WARNING" xml:space="preserve">
+    <value>Sorter-Warnung</value>
+  </data>
+  <data name="(1=WARNING)" xml:space="preserve">
+    <value>(1=Warnung)</value>
+  </data>
+  <data name="REMOTE MODE" xml:space="preserve">
+    <value>Remote-Modus</value>
+  </data>
+  <data name="SORTER IN REMOTE MODE" xml:space="preserve">
+    <value>Sortierer im Remote-Modus</value>
+  </data>
+  <data name="(1=REMOTE)" xml:space="preserve">
+    <value>(1=Fern)</value>
+  </data>
+  <data name="SORTER ON" xml:space="preserve">
+    <value>Sortierer an</value>
+  </data>
+  <data name="(1=ON)" xml:space="preserve">
+    <value>(1=Ein)</value>
+  </data>
+  <data name="SORTER LOCAL ESTOP BUTTON" xml:space="preserve">
+    <value>Sorter Local Stop-Taste</value>
+  </data>
+  <data name="(0=ESTOP PRESSED)" xml:space="preserve">
+    <value>(0=Stopp gedrückt)</value>
+  </data>
+  <data name="DOWNSTREAM FAULTY STATUS" xml:space="preserve">
+    <value>Downstream-Fehlerstatus</value>
+  </data>
+  <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
+    <value>Info_Downstr_Status</value>
+  </data>
+  <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream-Status OK (externes Signal)</value>
+  </data>
+  <data name="(1=DOWNSTREAM STATUS OK)" xml:space="preserve">
+    <value>(1=Downstream-Status Ok)</value>
+  </data>
+  <data name="DOWNSTREAM OK TO RECEIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream OK zum Empfangen (externes Signal)</value>
+  </data>
+  <data name="LOCAL DISCONNECT NOT OK" xml:space="preserve">
+    <value>Lokale Trennung nicht in Ordnung</value>
+  </data>
+  <data name="PAUSE_TIME" xml:space="preserve">
+    <value>Pausenzeit</value>
+  </data>
+  <data name="ON_TIME" xml:space="preserve">
+    <value>Pünktlich</value>
+  </data>
+  <data name="BYPASS" xml:space="preserve">
+    <value>Bypass</value>
+  </data>
+  <data name="OK FOR PROCESS (PLC RUN, ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>OK für Prozess (SPS läuft, Stopp OK + keine Alarme/Meldungen)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
+    <value>Kritischer Alarm vorhanden (wenn falsch --&gt; kein Prod-Start)</value>
+  </data>
 </root>
