--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -574,7 +574,7 @@
     <value>Allarme Critico!</value>
   </data>
   <data name="CRITICAL FAULT PRESENT" xml:space="preserve">
-    <value>Guasto Critico Presente</value>
+    <value>Allarme Critico Presente</value>
   </data>
   <data name="CURRENT OK FOR MATERIAL" xml:space="preserve">
     <value>Corrente OK per materiale</value>
@@ -640,10 +640,10 @@
     <value>Temperatura Motore</value>
   </data>
   <data name="NO CRITICAL FAULT" xml:space="preserve">
-    <value>Nessun Guasto Critico</value>
+    <value>Nessun Allarme Critico</value>
   </data>
   <data name="NO MINOR FAULT" xml:space="preserve">
-    <value>Nessun Guasto Secondario</value>
+    <value>Nessun Allarme Secondario</value>
   </data>
   <data name="NO-STOP AUTO INTERLOCKS" xml:space="preserve">
     <value>Interblocchi Automatici - No Stop</value>
@@ -982,7 +982,7 @@
     <value>Sirena Esterna</value>
   </data>
   <data name="CRITICAL FAULT IN THE ELECTRICAL CABINET" xml:space="preserve">
-    <value>Guasto Critico Nell'Armadio Elettrico</value>
+    <value>Allarme Critico Nell'Armadio Elettrico</value>
   </data>
   <data name="NO DATA" xml:space="preserve">
     <value>Nessun Dato</value>
@@ -1186,7 +1186,7 @@
     <value>Avvio manuale richiesto</value>
   </data>
   <data name="FAULT" xml:space="preserve">
-    <value>Colpa</value>
+    <value>Allarme</value>
   </data>
   <data name="PLC ADDRESS" xml:space="preserve">
     <value>Indirizzo PLC</value>
@@ -1204,7 +1204,7 @@
     <value>Alla pagina</value>
   </data>
   <data name="MINOR FAULT PRESENT" xml:space="preserve">
-    <value>Difetto minore presente</value>
+    <value>Allarme minore presente</value>
   </data>
   <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
     <value>Corrente del motore al di sotto del limite di intervallo minimo (possibile cavitazione)</value>
@@ -1360,10 +1360,10 @@
     <value>Motore in stallo o perdita di velocità</value>
   </data>
   <data name="RESET FAULTS" xml:space="preserve">
-    <value>Ripristina guasti</value>
+    <value>Ripristina Allarmi</value>
   </data>
   <data name="ACKNOWLEDGED FAULTS" xml:space="preserve">
-    <value>Difetti riconosciuti</value>
+    <value>Allarmi Acquisiti</value>
   </data>
   <data name="PRODUCTION MODE" xml:space="preserve">
     <value>Modalità di produzione</value>
@@ -1796,5 +1796,422 @@
   </data>
   <data name="LOW SPEED" xml:space="preserve">
     <value>Bassa Velocità</value>
+  </data>
+  <data name="MENU" xml:space="preserve">
+    <value>Menù</value>
+  </data>
+  <data name="MORE" xml:space="preserve">
+    <value>Altro</value>
+  </data>
+  <data name="CHANGE LANGUAGE" xml:space="preserve">
+    <value>Cambia lingua</value>
+  </data>
+  <data name="SWITCH THEME" xml:space="preserve">
+    <value>Cambia tema</value>
+  </data>
+  <data name="SWITCH DEVICE NAMES" xml:space="preserve">
+    <value>Cambia i nomi dei dispositivi</value>
+  </data>
+  <data name="DEBUG WINDOW" xml:space="preserve">
+    <value>Finestra di debug</value>
+  </data>
+  <data name="MINIMIZE PREVU" xml:space="preserve">
+    <value>Riduci a icona Prevu</value>
+  </data>
+  <data name="CLOSE PREVU" xml:space="preserve">
+    <value>Chiudi Prevu</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Sovrascrivere l'immagine?</value>
+  </data>
+  <data name="SELECTED VALUES" xml:space="preserve">
+    <value>Valori selezionati</value>
+  </data>
+  <data name="DIFFERENT VALUES" xml:space="preserve">
+    <value>Valori diversi</value>
+  </data>
+  <data name="SAVE AS" xml:space="preserve">
+    <value>Salva come</value>
+  </data>
+  <data name="LOAD IMAGE" xml:space="preserve">
+    <value>Carica immagine</value>
+  </data>
+  <data name="OPEN PROCESS IMAGE" xml:space="preserve">
+    <value>Apri immagine di processo</value>
+  </data>
+  <data name="NO PARAMETERS FOUND WITH ACTIVE FILTERS" xml:space="preserve">
+    <value>Nessun parametro trovato con filtri attivi</value>
+  </data>
+  <data name="COLLAPSE ALL" xml:space="preserve">
+    <value>Comprimi tutto</value>
+  </data>
+  <data name="TIMES" xml:space="preserve">
+    <value>Tempi</value>
+  </data>
+  <data name="FAILED TO SEND COMMAND. PLC NOT CONNECTED" xml:space="preserve">
+    <value>Impossibile inviare il comando. PLC non connesso</value>
+  </data>
+  <data name="ON COMMAND" xml:space="preserve">
+    <value>Comando ON</value>
+  </data>
+  <data name="WASHING" xml:space="preserve">
+    <value>Lavaggio</value>
+  </data>
+  <data name="(1=COOLING ON)" xml:space="preserve">
+    <value>(1=Raffreddamento acceso)</value>
+  </data>
+  <data name="MOTORNOMINALPOWER" xml:space="preserve">
+    <value>Potenza nominale del motore</value>
+  </data>
+  <data name="MOTORNOMINALCURRENT" xml:space="preserve">
+    <value>Corrente nominale motore</value>
+  </data>
+  <data name="INVERTERNOMINALOUTCURRENT" xml:space="preserve">
+    <value>Corrente nominale dell'inverter</value>
+  </data>
+  <data name="INVERTERBRAND" xml:space="preserve">
+    <value>Marchio Inverter</value>
+  </data>
+  <data name="MAIN FEEDING BELT" xml:space="preserve">
+    <value>Cinghia di alimentazione principale</value>
+  </data>
+  <data name="USAGE" xml:space="preserve">
+    <value>Utilizzo</value>
+  </data>
+  <data name="HOURS" xml:space="preserve">
+    <value>Ore</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK OR INVERTER IN LOCAL MODE)" xml:space="preserve">
+    <value>Stato difettoso (inverter non funzionante o inverter in modalità locale)</value>
+  </data>
+  <data name="COOLING FAN OVERLOAD" xml:space="preserve">
+    <value>Sovraccarico ventola di raffreddamento</value>
+  </data>
+  <data name="YOU HAVE UNSAVED CHANGES" xml:space="preserve">
+    <value>Hai modifiche non salvate</value>
+  </data>
+  <data name="WHAT DO YOU WANT TO DO?" xml:space="preserve">
+    <value>Che cosa vuoi fare?</value>
+  </data>
+  <data name="DISCARD CHANGES" xml:space="preserve">
+    <value>Non salvare le modifiche</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON PRESSED" xml:space="preserve">
+    <value>Pulsante Estop premuto</value>
+  </data>
+  <data name="SUBZONE IN AUTOMATIC MODE" xml:space="preserve">
+    <value>Sottozona in modalità automatica</value>
+  </data>
+  <data name="SUBZONE IN MAINTENANCE MODE" xml:space="preserve">
+    <value>Sottozona in modalità manutenzione</value>
+  </data>
+  <data name="SUBZONE IN DISABLED MODE" xml:space="preserve">
+    <value>Sottozona in modalità disabilitata</value>
+  </data>
+  <data name="SUBZONE IN E-STOP MODE" xml:space="preserve">
+    <value>Sottozona in modalità di arresto di emergenza</value>
+  </data>
+  <data name="DISABLING" xml:space="preserve">
+    <value>Disabilitazione</value>
+  </data>
+  <data name="SEMIAUTO" xml:space="preserve">
+    <value>Semiautomatico</value>
+  </data>
+  <data name="OIL VALVE" xml:space="preserve">
+    <value>Valvola dell'olio</value>
+  </data>
+  <data name="DEBALER BRT STANDARD INTERFACE" xml:space="preserve">
+    <value>Interfaccia standard di Debaler Brt</value>
+  </data>
+  <data name="PELLENC BOTTLE SORTER" xml:space="preserve">
+    <value>Selezionatore di bottiglie Pellenc</value>
+  </data>
+  <data name="DOWNSTREAM EXTERNAL MACHINE" xml:space="preserve">
+    <value>Macchina esterna a valle</value>
+  </data>
+  <data name="BELT" xml:space="preserve">
+    <value>Cintura</value>
+  </data>
+  <data name="MANUAL SORTING" xml:space="preserve">
+    <value>Ordinamento manuale</value>
+  </data>
+  <data name="EXTERNAL GRINDER" xml:space="preserve">
+    <value>Smerigliatrice esterna</value>
+  </data>
+  <data name="WATCHDOG" xml:space="preserve">
+    <value>Cane da guardia</value>
+  </data>
+  <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
+    <value>Contatore Wd incrementale (+1 ogni 100 ms - rollover a 30000)</value>
+  </data>
+  <data name="TRUE= AT LEAST ONE I/O MODULE CONNECTION DETECTED, 0 =SIMULATION ALLOWED" xml:space="preserve">
+    <value>True= Rilevata almeno una connessione del modulo I/O, 0 = Simulazione consentita</value>
+  </data>
+  <data name="PLC PROGRAM SIMULATION ACTIVE" xml:space="preserve">
+    <value>Simulazione programma plc attiva</value>
+  </data>
+  <data name="CABINET TEST ACTIVE" xml:space="preserve">
+    <value>Test gabinetto attivo</value>
+  </data>
+  <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
+    <value>Area Estop non ripristinata (con tutti i Pbs Estop ok)</value>
+  </data>
+  <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Stato relè principale</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok Per Processo (Stato Area Estop Ok + Nessun Allarmi/Messaggi)</value>
+  </data>
+  <data name="ALL AREA ESTOP PUSH BUTTON NOT PRESSED ( TRUE=OK)" xml:space="preserve">
+    <value>Pulsante di arresto di tutta l'area non premuto ( Vero = Ok)</value>
+  </data>
+  <data name="ALARM PRESENT" xml:space="preserve">
+    <value>Allarme presente</value>
+  </data>
+  <data name="NON-CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Allarme non critico presente</value>
+  </data>
+  <data name="MESSAGE PRESENT" xml:space="preserve">
+    <value>Messaggio presente</value>
+  </data>
+  <data name="NEW ALARM PRESENT" xml:space="preserve">
+    <value>Nuovo allarme presente</value>
+  </data>
+  <data name="EMERGENCY STOP RELAY RESET OK (DIRECT) (OF THIS ESTOP AREA)" xml:space="preserve">
+    <value>Reset relè arresto di emergenza OK (diretto) (di questa area di arresto)</value>
+  </data>
+  <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
+    <value>Sys - Ingressi digitali</value>
+  </data>
+  <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
+    <value>Sys - Uscite digitali</value>
+  </data>
+  <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - Dispositivi interni</value>
+  </data>
+  <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - Dispositivi esterni</value>
+  </data>
+  <data name="ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Commutatore Ethernet ok</value>
+  </data>
+  <data name="DIGITAL INPUTS OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>Ingressi digitali Ok (se falso --&gt; Estop Down)</value>
+  </data>
+  <data name="DIGITAL OUTPUTS OK" xml:space="preserve">
+    <value>Uscite digitali ok</value>
+  </data>
+  <data name="24 VOLTS INTERNAL OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>24 Volt interni Ok (se falso --&gt; Estop Down)</value>
+  </data>
+  <data name="24 VOLTS EXTERNAL OK" xml:space="preserve">
+    <value>24 Volt Esterni Ok</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok per il processo (Estop Ok + Nessun avviso/messaggi)</value>
+  </data>
+  <data name="ESTOP PRESSED (ON HMI)" xml:space="preserve">
+    <value>Estop premuto (su Hmi)</value>
+  </data>
+  <data name="OK FOR PROCESS (EPB OK)" xml:space="preserve">
+    <value>Ok per il processo (Epb Ok)</value>
+  </data>
+  <data name="PULL-CORD SAFETIES" xml:space="preserve">
+    <value>Sicurezze a fune</value>
+  </data>
+  <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
+    <value>Disconnessione locale Ok (se presente)</value>
+  </data>
+  <data name="LOCAL SAFETY OK   (IF ANY - E.G. STRAP L.S.)" xml:space="preserve">
+    <value>Sicurezza locale ok (se presente, ad es. cinturino LS)</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (0=SHOW START PB)" xml:space="preserve">
+    <value>Nascondi pulsante di avvio su Hmi (0=Mostra Pb di avvio)</value>
+  </data>
+  <data name="COMPONENT ENABLED (NO MANUAL START REQUIRED)" xml:space="preserve">
+    <value>Componente abilitato (nessun avvio manuale richiesto)</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS" xml:space="preserve">
+    <value>In attesa di condizioni di processo</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
+    <value>In attesa che le condizioni del processo inizino</value>
+  </data>
+  <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
+    <value>In attesa che il tempo di evacuazione si fermi</value>
+  </data>
+  <data name="ON TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Il tempo è impostato su zero</value>
+  </data>
+  <data name="COMMAND GREASE ON" xml:space="preserve">
+    <value>Comando Grasso ON</value>
+  </data>
+  <data name="READY TO START" xml:space="preserve">
+    <value>Pronto per iniziare</value>
+  </data>
+  <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
+    <value>Esecuzione completa (ok per processo)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Allarme critico presente</value>
+  </data>
+  <data name="DEBALER IN AUTO" xml:space="preserve">
+    <value>Disimballatrice in automatico</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO (EXTERNAL PLANT)" xml:space="preserve">
+    <value>Disimballatrice non in automatico (impianto esterno)</value>
+  </data>
+  <data name="DEBALER FAULTY STATUS" xml:space="preserve">
+    <value>Stato difettoso dell'imballatrice</value>
+  </data>
+  <data name="DEBALER NOT RUNNING" xml:space="preserve">
+    <value>Disimballatore non funzionante</value>
+  </data>
+  <data name="DEBALER STARTED AND ACTIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Disimballatore avviato e attivo (segnale esterno)</value>
+  </data>
+  <data name="EXTERNAL INPUT" xml:space="preserve">
+    <value>Ingresso esterno</value>
+  </data>
+  <data name="(1=STARTED AND ACTIVE)" xml:space="preserve">
+    <value>(1=Avviato e attivo)</value>
+  </data>
+  <data name="DEBALER IN AUTO MODE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Disimballatrice in modalità automatica (segnale esterno)</value>
+  </data>
+  <data name="DEBALER STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Stato Debaler Ok (Segnale Esterno)</value>
+  </data>
+  <data name="(1=NO FAULTS)" xml:space="preserve">
+    <value>(1=Nessun Allarme)</value>
+  </data>
+  <data name="DEBALER START REQUEST" xml:space="preserve">
+    <value>Richiesta di avvio dell'imballatrice</value>
+  </data>
+  <data name="EXTERNAL OUTPUT" xml:space="preserve">
+    <value>Uscita esterna</value>
+  </data>
+  <data name="(1=START REQUEST)" xml:space="preserve">
+    <value>(1=Avvia richiesta)</value>
+  </data>
+  <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
+    <value>Conferma richiesta avvio debaler</value>
+  </data>
+  <data name="(1=CONFIRM START)" xml:space="preserve">
+    <value>(1=Conferma inizio)</value>
+  </data>
+  <data name="DEBALER AUTO MODE REQUEST" xml:space="preserve">
+    <value>Richiesta modalità automatica disimballatrice</value>
+  </data>
+  <data name="(1=REQUEST AUTO MODE)" xml:space="preserve">
+    <value>(1=Richiedi modalità automatica)</value>
+  </data>
+  <data name="CONTROL" xml:space="preserve">
+    <value>Controllo</value>
+  </data>
+  <data name="SORTING UNIT DISABLED FOR PRODUCTION" xml:space="preserve">
+    <value>Unità di smistamento disabilitata per la produzione</value>
+  </data>
+  <data name="SORTER WARNING PRESENT" xml:space="preserve">
+    <value>Avviso sorter presente</value>
+  </data>
+  <data name="SORTING UNIT NOT SORTING OK" xml:space="preserve">
+    <value>Unità di smistamento non in ordinamento OK</value>
+  </data>
+  <data name="SORTING UNIT  CONTROL ALARM" xml:space="preserve">
+    <value>Allarme di controllo dell'unità di smistamento</value>
+  </data>
+  <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
+    <value>Unità di smistamento nel controllo della modalità locale</value>
+  </data>
+  <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
+    <value>Unità di smistamento non attiva</value>
+  </data>
+  <data name="SORTING UNIT - LOCAL ESTOP PUSHBUTTON NOT RESET (STOP BELT)" xml:space="preserve">
+    <value>Unità di smistamento - Pulsante di arresto locale non ripristinato (cinghia di arresto)</value>
+  </data>
+  <data name="SORTING" xml:space="preserve">
+    <value>Ordinamento</value>
+  </data>
+  <data name="SORTING IN PROGRESS" xml:space="preserve">
+    <value>Ordinamento in corso</value>
+  </data>
+  <data name="(1=SORTING)" xml:space="preserve">
+    <value>(1=Ordinamento)</value>
+  </data>
+  <data name="SORTING STANDBY" xml:space="preserve">
+    <value>Ordinamento in attesa</value>
+  </data>
+  <data name="(1=STANDBY)" xml:space="preserve">
+    <value>(1=Standby)</value>
+  </data>
+  <data name="NO FAULTS" xml:space="preserve">
+    <value>Nessun Allarme</value>
+  </data>
+  <data name="SORTER NO FAULTS" xml:space="preserve">
+    <value>Separatore nessun Allarme</value>
+  </data>
+  <data name="WARNING PRESENT" xml:space="preserve">
+    <value>Avvertimento presente</value>
+  </data>
+  <data name="SORTER WARNING" xml:space="preserve">
+    <value>Avviso selezionatore</value>
+  </data>
+  <data name="(1=WARNING)" xml:space="preserve">
+    <value>(1=Avviso)</value>
+  </data>
+  <data name="REMOTE MODE" xml:space="preserve">
+    <value>Modalità remota</value>
+  </data>
+  <data name="SORTER IN REMOTE MODE" xml:space="preserve">
+    <value>Separatore in modalità remota</value>
+  </data>
+  <data name="(1=REMOTE)" xml:space="preserve">
+    <value>(1=Telecomando)</value>
+  </data>
+  <data name="SORTER ON" xml:space="preserve">
+    <value>Selezionatore attivato</value>
+  </data>
+  <data name="(1=ON)" xml:space="preserve">
+    <value>(1=Attivo)</value>
+  </data>
+  <data name="SORTER LOCAL ESTOP BUTTON" xml:space="preserve">
+    <value>Pulsante di arresto locale del sorter</value>
+  </data>
+  <data name="(0=ESTOP PRESSED)" xml:space="preserve">
+    <value>(0=Stop premuto)</value>
+  </data>
+  <data name="DOWNSTREAM FAULTY STATUS" xml:space="preserve">
+    <value>Stato di Allarme a valle</value>
+  </data>
+  <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
+    <value>Info_Downstr_Status</value>
+  </data>
+  <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Stato a valle Ok (segnale esterno)</value>
+  </data>
+  <data name="(1=DOWNSTREAM STATUS OK)" xml:space="preserve">
+    <value>(1=Stato a valle ok)</value>
+  </data>
+  <data name="DOWNSTREAM OK TO RECEIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>A valle Ok per ricevere (segnale esterno)</value>
+  </data>
+  <data name="LOCAL DISCONNECT NOT OK" xml:space="preserve">
+    <value>Disconnessione locale non ok</value>
+  </data>
+  <data name="PAUSE_TIME" xml:space="preserve">
+    <value>Tempo_pausa</value>
+  </data>
+  <data name="ON_TIME" xml:space="preserve">
+    <value>Puntuale</value>
+  </data>
+  <data name="BYPASS" xml:space="preserve">
+    <value>Bypass</value>
+  </data>
+  <data name="OK FOR PROCESS (PLC RUN, ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok Per Processo (Plc Run, Estop Ok + Nessun Allarmi/Messaggi)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
+    <value>Allarme critico presente (se falso --&gt; No Prod Start)</value>
   </data>
 </root>
