--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -2654,4 +2654,421 @@
   <data name="LOW SPEED" xml:space="preserve">
     <value>Low Speed</value>
   </data>
+  <data name="MENU" xml:space="preserve">
+    <value>Menu</value>
+  </data>
+  <data name="MORE" xml:space="preserve">
+    <value>More</value>
+  </data>
+  <data name="CHANGE LANGUAGE" xml:space="preserve">
+    <value>Change Language</value>
+  </data>
+  <data name="SWITCH THEME" xml:space="preserve">
+    <value>Switch Theme</value>
+  </data>
+  <data name="SWITCH DEVICE NAMES" xml:space="preserve">
+    <value>Switch Device Names</value>
+  </data>
+  <data name="DEBUG WINDOW" xml:space="preserve">
+    <value>Debug Window</value>
+  </data>
+  <data name="MINIMIZE PREVU" xml:space="preserve">
+    <value>Minimize Prevu</value>
+  </data>
+  <data name="CLOSE PREVU" xml:space="preserve">
+    <value>Close Prevu</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>Overwrite The Following Image?</value>
+  </data>
+  <data name="SELECTED VALUES" xml:space="preserve">
+    <value>Selected Values</value>
+  </data>
+  <data name="DIFFERENT VALUES" xml:space="preserve">
+    <value>Different Values</value>
+  </data>
+  <data name="SAVE AS" xml:space="preserve">
+    <value>Save As</value>
+  </data>
+  <data name="LOAD IMAGE" xml:space="preserve">
+    <value>Load Image</value>
+  </data>
+  <data name="OPEN PROCESS IMAGE" xml:space="preserve">
+    <value>Open Process Image</value>
+  </data>
+  <data name="NO PARAMETERS FOUND WITH ACTIVE FILTERS" xml:space="preserve">
+    <value>No Parameters Found With Active Filters</value>
+  </data>
+  <data name="COLLAPSE ALL" xml:space="preserve">
+    <value>Collapse All</value>
+  </data>
+  <data name="TIMES" xml:space="preserve">
+    <value>Times</value>
+  </data>
+  <data name="FAILED TO SEND COMMAND. PLC NOT CONNECTED" xml:space="preserve">
+    <value>Failed To Send Command. Plc Not Connected</value>
+  </data>
+  <data name="ON COMMAND" xml:space="preserve">
+    <value>ON Command</value>
+  </data>
+  <data name="WASHING" xml:space="preserve">
+    <value>Washing</value>
+  </data>
+  <data name="(1=COOLING ON)" xml:space="preserve">
+    <value>(1=Cooling On)</value>
+  </data>
+  <data name="MOTORNOMINALPOWER" xml:space="preserve">
+    <value>Motornominalpower</value>
+  </data>
+  <data name="MOTORNOMINALCURRENT" xml:space="preserve">
+    <value>Motornominalcurrent</value>
+  </data>
+  <data name="INVERTERNOMINALOUTCURRENT" xml:space="preserve">
+    <value>Inverternominaloutcurrent</value>
+  </data>
+  <data name="INVERTERBRAND" xml:space="preserve">
+    <value>Inverterbrand</value>
+  </data>
+  <data name="MAIN FEEDING BELT" xml:space="preserve">
+    <value>Main Feeding Belt</value>
+  </data>
+  <data name="USAGE" xml:space="preserve">
+    <value>Usage</value>
+  </data>
+  <data name="HOURS" xml:space="preserve">
+    <value>Hours</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK OR INVERTER IN LOCAL MODE)" xml:space="preserve">
+    <value>Faulty Status (Inverter Not Running Ok Or Inverter In Local Mode)</value>
+  </data>
+  <data name="COOLING FAN OVERLOAD" xml:space="preserve">
+    <value>Cooling Fan Overload</value>
+  </data>
+  <data name="YOU HAVE UNSAVED CHANGES" xml:space="preserve">
+    <value>You Have Unsaved Changes</value>
+  </data>
+  <data name="WHAT DO YOU WANT TO DO?" xml:space="preserve">
+    <value>What Do You Want To Do?</value>
+  </data>
+  <data name="DISCARD CHANGES" xml:space="preserve">
+    <value>Discard Changes</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON PRESSED" xml:space="preserve">
+    <value>Estop Push-Button Pressed</value>
+  </data>
+  <data name="SUBZONE IN AUTOMATIC MODE" xml:space="preserve">
+    <value>Subzone In Automatic Mode</value>
+  </data>
+  <data name="SUBZONE IN MAINTENANCE MODE" xml:space="preserve">
+    <value>Subzone In Maintenance Mode</value>
+  </data>
+  <data name="SUBZONE IN DISABLED MODE" xml:space="preserve">
+    <value>Subzone In Disabled Mode</value>
+  </data>
+  <data name="SUBZONE IN E-STOP MODE" xml:space="preserve">
+    <value>Subzone In E-Stop Mode</value>
+  </data>
+  <data name="DISABLING" xml:space="preserve">
+    <value>Disabling</value>
+  </data>
+  <data name="SEMIAUTO" xml:space="preserve">
+    <value>Semiauto</value>
+  </data>
+  <data name="OIL VALVE" xml:space="preserve">
+    <value>Oil Valve</value>
+  </data>
+  <data name="DEBALER BRT STANDARD INTERFACE" xml:space="preserve">
+    <value>Debaler Brt Standard Interface</value>
+  </data>
+  <data name="PELLENC BOTTLE SORTER" xml:space="preserve">
+    <value>Pellenc Bottle Sorter</value>
+  </data>
+  <data name="DOWNSTREAM EXTERNAL MACHINE" xml:space="preserve">
+    <value>Downstream External Machine</value>
+  </data>
+  <data name="BELT" xml:space="preserve">
+    <value>Belt</value>
+  </data>
+  <data name="MANUAL SORTING" xml:space="preserve">
+    <value>Manual Sorting</value>
+  </data>
+  <data name="EXTERNAL GRINDER" xml:space="preserve">
+    <value>External Grinder</value>
+  </data>
+  <data name="WATCHDOG" xml:space="preserve">
+    <value>Watchdog</value>
+  </data>
+  <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
+    <value>Incremental Wd Counter ( +1 Every 100 Ms - Rollover At 30000 )</value>
+  </data>
+  <data name="TRUE= AT LEAST ONE I/O MODULE CONNECTION DETECTED, 0 =SIMULATION ALLOWED" xml:space="preserve">
+    <value>True= At Least One I/O Module Connection Detected, 0 =Simulation Allowed</value>
+  </data>
+  <data name="PLC PROGRAM SIMULATION ACTIVE" xml:space="preserve">
+    <value>Plc Program Simulation Active</value>
+  </data>
+  <data name="CABINET TEST ACTIVE" xml:space="preserve">
+    <value>Cabinet Test Active</value>
+  </data>
+  <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
+    <value>Estop Area Not Reset (With All Estop Pbs Ok)</value>
+  </data>
+  <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Master Relay Status</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok For Process (Estop Area Status Ok + No Alarms/Messages)</value>
+  </data>
+  <data name="ALL AREA ESTOP PUSH BUTTON NOT PRESSED ( TRUE=OK)" xml:space="preserve">
+    <value>All Area Estop Push Button Not Pressed ( True=Ok)</value>
+  </data>
+  <data name="ALARM PRESENT" xml:space="preserve">
+    <value>Alarm Present</value>
+  </data>
+  <data name="NON-CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Non-Critical Alarm Present</value>
+  </data>
+  <data name="MESSAGE PRESENT" xml:space="preserve">
+    <value>Message Present</value>
+  </data>
+  <data name="NEW ALARM PRESENT" xml:space="preserve">
+    <value>New Alarm Present</value>
+  </data>
+  <data name="EMERGENCY STOP RELAY RESET OK (DIRECT) (OF THIS ESTOP AREA)" xml:space="preserve">
+    <value>Emergency Stop Relay Reset Ok (Direct) (Of This Estop Area)</value>
+  </data>
+  <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
+    <value>Sys - Digital Inputs</value>
+  </data>
+  <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
+    <value>Sys - Digital Outputs</value>
+  </data>
+  <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - Internal Devices</value>
+  </data>
+  <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - External Devices</value>
+  </data>
+  <data name="ETHERNET SWITCH OK" xml:space="preserve">
+    <value>Ethernet Switch Ok</value>
+  </data>
+  <data name="DIGITAL INPUTS OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>Digital Inputs Ok     (If  False --&gt; Estop Down)</value>
+  </data>
+  <data name="DIGITAL OUTPUTS OK" xml:space="preserve">
+    <value>Digital Outputs Ok</value>
+  </data>
+  <data name="24 VOLTS INTERNAL OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>24 Volts Internal Ok     (If  False --&gt; Estop Down)</value>
+  </data>
+  <data name="24 VOLTS EXTERNAL OK" xml:space="preserve">
+    <value>24 Volts External Ok</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok For Process (Estop Ok + No Alarms/Messages)</value>
+  </data>
+  <data name="ESTOP PRESSED (ON HMI)" xml:space="preserve">
+    <value>Estop Pressed (On Hmi)</value>
+  </data>
+  <data name="OK FOR PROCESS (EPB OK)" xml:space="preserve">
+    <value>Ok For Process (Epb Ok)</value>
+  </data>
+  <data name="PULL-CORD SAFETIES" xml:space="preserve">
+    <value>Pull-Cord Safeties</value>
+  </data>
+  <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
+    <value>Local Disconnect Ok   (If Any)</value>
+  </data>
+  <data name="LOCAL SAFETY OK   (IF ANY - E.G. STRAP L.S.)" xml:space="preserve">
+    <value>Local Safety Ok   (If Any - E.G. Strap L.S.)</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (0=SHOW START PB)" xml:space="preserve">
+    <value>Hide Start Button On Hmi  (0=Show Start Pb)</value>
+  </data>
+  <data name="COMPONENT ENABLED (NO MANUAL START REQUIRED)" xml:space="preserve">
+    <value>Component Enabled (No Manual Start Required)</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS" xml:space="preserve">
+    <value>Waiting For Process Conditions</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
+    <value>Waiting For Process Conditions To Start</value>
+  </data>
+  <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
+    <value>Waiting For Evacuation Time To Stop</value>
+  </data>
+  <data name="ON TIME IS SET TO ZERO" xml:space="preserve">
+    <value>On Time Is Set To Zero</value>
+  </data>
+  <data name="COMMAND GREASE ON" xml:space="preserve">
+    <value>Command Grease On</value>
+  </data>
+  <data name="READY TO START" xml:space="preserve">
+    <value>Ready To Start</value>
+  </data>
+  <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
+    <value>Full Running (Ok For Process)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>Critical Alarm Present</value>
+  </data>
+  <data name="DEBALER IN AUTO" xml:space="preserve">
+    <value>Debaler In Auto</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO (EXTERNAL PLANT)" xml:space="preserve">
+    <value>Debaler Not In Auto (External Plant)</value>
+  </data>
+  <data name="DEBALER FAULTY STATUS" xml:space="preserve">
+    <value>Debaler Faulty Status</value>
+  </data>
+  <data name="DEBALER NOT RUNNING" xml:space="preserve">
+    <value>Debaler Not Running</value>
+  </data>
+  <data name="DEBALER STARTED AND ACTIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Debaler Started And Active (External Signal)</value>
+  </data>
+  <data name="EXTERNAL INPUT" xml:space="preserve">
+    <value>External Input</value>
+  </data>
+  <data name="(1=STARTED AND ACTIVE)" xml:space="preserve">
+    <value>(1=Started And Active)</value>
+  </data>
+  <data name="DEBALER IN AUTO MODE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Debaler In Auto Mode (External Signal)</value>
+  </data>
+  <data name="DEBALER STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Debaler Status Ok (External Signal)</value>
+  </data>
+  <data name="(1=NO FAULTS)" xml:space="preserve">
+    <value>(1=No Faults)</value>
+  </data>
+  <data name="DEBALER START REQUEST" xml:space="preserve">
+    <value>Debaler Start Request</value>
+  </data>
+  <data name="EXTERNAL OUTPUT" xml:space="preserve">
+    <value>External Output</value>
+  </data>
+  <data name="(1=START REQUEST)" xml:space="preserve">
+    <value>(1=Start Request)</value>
+  </data>
+  <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
+    <value>Debaler Start Request Confirm</value>
+  </data>
+  <data name="(1=CONFIRM START)" xml:space="preserve">
+    <value>(1=Confirm Start)</value>
+  </data>
+  <data name="DEBALER AUTO MODE REQUEST" xml:space="preserve">
+    <value>Debaler Auto Mode Request</value>
+  </data>
+  <data name="(1=REQUEST AUTO MODE)" xml:space="preserve">
+    <value>(1=Request Auto Mode)</value>
+  </data>
+  <data name="CONTROL" xml:space="preserve">
+    <value>Control</value>
+  </data>
+  <data name="SORTING UNIT DISABLED FOR PRODUCTION" xml:space="preserve">
+    <value>Sorting Unit Disabled For Production</value>
+  </data>
+  <data name="SORTER WARNING PRESENT" xml:space="preserve">
+    <value>Sorter Warning Present</value>
+  </data>
+  <data name="SORTING UNIT NOT SORTING OK" xml:space="preserve">
+    <value>Sorting Unit Not Sorting Ok</value>
+  </data>
+  <data name="SORTING UNIT  CONTROL ALARM" xml:space="preserve">
+    <value>Sorting Unit  Control Alarm</value>
+  </data>
+  <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
+    <value>Sorting Unit In Local Mode Control</value>
+  </data>
+  <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
+    <value>Sorting Unit Not On Ok</value>
+  </data>
+  <data name="SORTING UNIT - LOCAL ESTOP PUSHBUTTON NOT RESET (STOP BELT)" xml:space="preserve">
+    <value>Sorting Unit - Local Estop Pushbutton Not Reset (Stop Belt)</value>
+  </data>
+  <data name="SORTING" xml:space="preserve">
+    <value>Sorting</value>
+  </data>
+  <data name="SORTING IN PROGRESS" xml:space="preserve">
+    <value>Sorting In Progress</value>
+  </data>
+  <data name="(1=SORTING)" xml:space="preserve">
+    <value>(1=Sorting)</value>
+  </data>
+  <data name="SORTING STANDBY" xml:space="preserve">
+    <value>Sorting Standby</value>
+  </data>
+  <data name="(1=STANDBY)" xml:space="preserve">
+    <value>(1=Standby)</value>
+  </data>
+  <data name="NO FAULTS" xml:space="preserve">
+    <value>No Faults</value>
+  </data>
+  <data name="SORTER NO FAULTS" xml:space="preserve">
+    <value>Sorter No Faults</value>
+  </data>
+  <data name="WARNING PRESENT" xml:space="preserve">
+    <value>Warning Present</value>
+  </data>
+  <data name="SORTER WARNING" xml:space="preserve">
+    <value>Sorter Warning</value>
+  </data>
+  <data name="(1=WARNING)" xml:space="preserve">
+    <value>(1=Warning)</value>
+  </data>
+  <data name="REMOTE MODE" xml:space="preserve">
+    <value>Remote Mode</value>
+  </data>
+  <data name="SORTER IN REMOTE MODE" xml:space="preserve">
+    <value>Sorter In Remote Mode</value>
+  </data>
+  <data name="(1=REMOTE)" xml:space="preserve">
+    <value>(1=Remote)</value>
+  </data>
+  <data name="SORTER ON" xml:space="preserve">
+    <value>Sorter On</value>
+  </data>
+  <data name="(1=ON)" xml:space="preserve">
+    <value>(1=On)</value>
+  </data>
+  <data name="SORTER LOCAL ESTOP BUTTON" xml:space="preserve">
+    <value>Sorter Local Estop Button</value>
+  </data>
+  <data name="(0=ESTOP PRESSED)" xml:space="preserve">
+    <value>(0=Estop Pressed)</value>
+  </data>
+  <data name="DOWNSTREAM FAULTY STATUS" xml:space="preserve">
+    <value>Downstream Faulty Status</value>
+  </data>
+  <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
+    <value>Info_Downstr_Status</value>
+  </data>
+  <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream Status Ok (External Signal)</value>
+  </data>
+  <data name="(1=DOWNSTREAM STATUS OK)" xml:space="preserve">
+    <value>(1=Downstream Status Ok)</value>
+  </data>
+  <data name="DOWNSTREAM OK TO RECEIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Downstream Ok To Receive (External Signal)</value>
+  </data>
+  <data name="LOCAL DISCONNECT NOT OK" xml:space="preserve">
+    <value>Local Disconnect Not Ok</value>
+  </data>
+  <data name="PAUSE_TIME" xml:space="preserve">
+    <value>Pause_Time</value>
+  </data>
+  <data name="ON_TIME" xml:space="preserve">
+    <value>On_Time</value>
+  </data>
+  <data name="BYPASS" xml:space="preserve">
+    <value>Bypass</value>
+  </data>
+  <data name="OK FOR PROCESS (PLC RUN, ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>Ok For Process (Plc Run, Estop Ok + No Alarms/Messages)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
+    <value>Critical Alarm Present    (If  False --&gt; No  Prod Start)</value>
+  </data>
 </root>
