--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -2205,4 +2205,427 @@
   <data name="WITH DIRECTION" xml:space="preserve">
     <value>مع الاتجاه</value>
   </data>
+  <data name="HIGH SPEED" xml:space="preserve">
+    <value>السرعه العاليه</value>
+  </data>
+  <data name="LOW SPEED" xml:space="preserve">
+    <value>سرعة منخفضة</value>
+  </data>
+  <data name="MENU" xml:space="preserve">
+    <value>قائمة الطعام</value>
+  </data>
+  <data name="MORE" xml:space="preserve">
+    <value>أكثر</value>
+  </data>
+  <data name="CHANGE LANGUAGE" xml:space="preserve">
+    <value>تغيير اللغة</value>
+  </data>
+  <data name="SWITCH THEME" xml:space="preserve">
+    <value>تبديل الموضوع</value>
+  </data>
+  <data name="SWITCH DEVICE NAMES" xml:space="preserve">
+    <value>تبديل أسماء الأجهزة</value>
+  </data>
+  <data name="DEBUG WINDOW" xml:space="preserve">
+    <value>نافذة التصحيح</value>
+  </data>
+  <data name="MINIMIZE PREVU" xml:space="preserve">
+    <value>تصغير Prevu</value>
+  </data>
+  <data name="CLOSE PREVU" xml:space="preserve">
+    <value>إغلاق بريفو</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>هل تريد الكتابة فوق الصورة التالية؟</value>
+  </data>
+  <data name="SELECTED VALUES" xml:space="preserve">
+    <value>القيم المختارة</value>
+  </data>
+  <data name="DIFFERENT VALUES" xml:space="preserve">
+    <value>قيم مختلفة</value>
+  </data>
+  <data name="SAVE AS" xml:space="preserve">
+    <value>حفظ باسم</value>
+  </data>
+  <data name="LOAD IMAGE" xml:space="preserve">
+    <value>تحميل الصورة</value>
+  </data>
+  <data name="OPEN PROCESS IMAGE" xml:space="preserve">
+    <value>افتح صورة العملية</value>
+  </data>
+  <data name="NO PARAMETERS FOUND WITH ACTIVE FILTERS" xml:space="preserve">
+    <value>لم يتم العثور على معلمات مع عوامل التصفية النشطة</value>
+  </data>
+  <data name="COLLAPSE ALL" xml:space="preserve">
+    <value>انهيار جميع</value>
+  </data>
+  <data name="TIMES" xml:space="preserve">
+    <value>مرات</value>
+  </data>
+  <data name="FAILED TO SEND COMMAND. PLC NOT CONNECTED" xml:space="preserve">
+    <value>فشل في إرسال الأمر. Plc غير متصل</value>
+  </data>
+  <data name="ON COMMAND" xml:space="preserve">
+    <value>على الأمر</value>
+  </data>
+  <data name="WASHING" xml:space="preserve">
+    <value>غسل</value>
+  </data>
+  <data name="(1=COOLING ON)" xml:space="preserve">
+    <value>(1 = التبريد)</value>
+  </data>
+  <data name="MOTORNOMINALPOWER" xml:space="preserve">
+    <value>القوة الجسدية</value>
+  </data>
+  <data name="MOTORNOMINALCURRENT" xml:space="preserve">
+    <value>التيار المحوري</value>
+  </data>
+  <data name="INVERTERNOMINALOUTCURRENT" xml:space="preserve">
+    <value>التيار الداخلي الداخلي</value>
+  </data>
+  <data name="INVERTERBRAND" xml:space="preserve">
+    <value>انفرتر براند</value>
+  </data>
+  <data name="MAIN FEEDING BELT" xml:space="preserve">
+    <value>حزام التغذية الرئيسي</value>
+  </data>
+  <data name="USAGE" xml:space="preserve">
+    <value>إستعمال</value>
+  </data>
+  <data name="HOURS" xml:space="preserve">
+    <value>ساعات</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK OR INVERTER IN LOCAL MODE)" xml:space="preserve">
+    <value>الحالة الخاطئة (العاكس لا يعمل بشكل جيد أو العاكس في الوضع المحلي)</value>
+  </data>
+  <data name="COOLING FAN OVERLOAD" xml:space="preserve">
+    <value>مروحة التبريد الزائد</value>
+  </data>
+  <data name="YOU HAVE UNSAVED CHANGES" xml:space="preserve">
+    <value>لم تحفظ التغييرات</value>
+  </data>
+  <data name="WHAT DO YOU WANT TO DO?" xml:space="preserve">
+    <value>ماذا تريد أن تفعل؟</value>
+  </data>
+  <data name="DISCARD CHANGES" xml:space="preserve">
+    <value>تجاهل التغييرات</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON PRESSED" xml:space="preserve">
+    <value>الضغط على زر Estop</value>
+  </data>
+  <data name="SUBZONE IN AUTOMATIC MODE" xml:space="preserve">
+    <value>المنطقة الفرعية في الوضع التلقائي</value>
+  </data>
+  <data name="SUBZONE IN MAINTENANCE MODE" xml:space="preserve">
+    <value>المنطقة الفرعية في وضع الصيانة</value>
+  </data>
+  <data name="SUBZONE IN DISABLED MODE" xml:space="preserve">
+    <value>المنطقة الفرعية في وضع المعطل</value>
+  </data>
+  <data name="SUBZONE IN E-STOP MODE" xml:space="preserve">
+    <value>المنطقة الفرعية في وضع التوقف الإلكتروني</value>
+  </data>
+  <data name="DISABLING" xml:space="preserve">
+    <value>التعطيل</value>
+  </data>
+  <data name="SEMIAUTO" xml:space="preserve">
+    <value>شبه تلقائي</value>
+  </data>
+  <data name="OIL VALVE" xml:space="preserve">
+    <value>صمام الزيت</value>
+  </data>
+  <data name="DEBALER BRT STANDARD INTERFACE" xml:space="preserve">
+    <value>واجهة Debaler Brt القياسية</value>
+  </data>
+  <data name="PELLENC BOTTLE SORTER" xml:space="preserve">
+    <value>فارز زجاجة Pellenc</value>
+  </data>
+  <data name="DOWNSTREAM EXTERNAL MACHINE" xml:space="preserve">
+    <value>آلة خارجية المصب</value>
+  </data>
+  <data name="BELT" xml:space="preserve">
+    <value>حزام</value>
+  </data>
+  <data name="MANUAL SORTING" xml:space="preserve">
+    <value>الفرز اليدوي</value>
+  </data>
+  <data name="EXTERNAL GRINDER" xml:space="preserve">
+    <value>مطحنة خارجية</value>
+  </data>
+  <data name="WATCHDOG" xml:space="preserve">
+    <value>حراسة</value>
+  </data>
+  <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
+    <value>عداد وزن إضافي (+1 كل 100 مللي ثانية - تدوير عند 30000)</value>
+  </data>
+  <data name="TRUE= AT LEAST ONE I/O MODULE CONNECTION DETECTED, 0 =SIMULATION ALLOWED" xml:space="preserve">
+    <value>صحيح = تم اكتشاف اتصال وحدة إدخال / إخراج واحدة على الأقل ، 0 = السماح بالمحاكاة</value>
+  </data>
+  <data name="PLC PROGRAM SIMULATION ACTIVE" xml:space="preserve">
+    <value>محاكاة برنامج Plc نشطة</value>
+  </data>
+  <data name="CABINET TEST ACTIVE" xml:space="preserve">
+    <value>تم تفعيل اختبار الخزانة</value>
+  </data>
+  <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
+    <value>لم يتم إعادة تعيين منطقة Estop (مع كل Estop Pbs موافق)</value>
+  </data>
+  <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - حالة الترحيل الرئيسي</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>حسنًا للمعالجة (حالة منطقة التوقف جيدة + لا توجد إنذارات / رسائل)</value>
+  </data>
+  <data name="ALL AREA ESTOP PUSH BUTTON NOT PRESSED ( TRUE=OK)" xml:space="preserve">
+    <value>لم يتم الضغط على زر إيقاف كل منطقة (صحيح = موافق)</value>
+  </data>
+  <data name="ALARM PRESENT" xml:space="preserve">
+    <value>المنبه موجود</value>
+  </data>
+  <data name="NON-CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>إنذار غير حرج موجود</value>
+  </data>
+  <data name="MESSAGE PRESENT" xml:space="preserve">
+    <value>الرسالة موجودة</value>
+  </data>
+  <data name="NEW ALARM PRESENT" xml:space="preserve">
+    <value>المنبه الجديد موجود</value>
+  </data>
+  <data name="EMERGENCY STOP RELAY RESET OK (DIRECT) (OF THIS ESTOP AREA)" xml:space="preserve">
+    <value>إعادة تعيين مرحل الإيقاف في حالات الطوارئ طيب (مباشر) (من منطقة Estop هذه)</value>
+  </data>
+  <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
+    <value>Sys - المدخلات الرقمية</value>
+  </data>
+  <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
+    <value>Sys - المخرجات الرقمية</value>
+  </data>
+  <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - الأجهزة الداخلية</value>
+  </data>
+  <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
+    <value>Sys - الأجهزة الخارجية</value>
+  </data>
+  <data name="ETHERNET SWITCH OK" xml:space="preserve">
+    <value>تبديل إيثرنت طيب</value>
+  </data>
+  <data name="DIGITAL INPUTS OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>المدخلات الرقمية جيدة (إذا كانت خطأ -&gt; إيقاف لأسفل)</value>
+  </data>
+  <data name="DIGITAL OUTPUTS OK" xml:space="preserve">
+    <value>المخرجات الرقمية جيدة</value>
+  </data>
+  <data name="24 VOLTS INTERNAL OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>24 فولت داخلي جيد (إذا كان خطأ -&gt; توقف لأسفل)</value>
+  </data>
+  <data name="24 VOLTS EXTERNAL OK" xml:space="preserve">
+    <value>24 فولت طيب خارجي</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>حسنًا للمعالجة (Estop Ok + بدون إنذارات / رسائل)</value>
+  </data>
+  <data name="ESTOP PRESSED (ON HMI)" xml:space="preserve">
+    <value>الضغط Estop (على Hmi)</value>
+  </data>
+  <data name="OK FOR PROCESS (EPB OK)" xml:space="preserve">
+    <value>موافق للعملية (Epb Ok)</value>
+  </data>
+  <data name="PULL-CORD SAFETIES" xml:space="preserve">
+    <value>أمان سحب الحبل</value>
+  </data>
+  <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
+    <value>قطع الاتصال المحلي طيب (إن وجد)</value>
+  </data>
+  <data name="LOCAL SAFETY OK   (IF ANY - E.G. STRAP L.S.)" xml:space="preserve">
+    <value>السلامة المحلية جيدة (إن وجدت - على سبيل المثال حزام L.S.)</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (0=SHOW START PB)" xml:space="preserve">
+    <value>إخفاء زر البدء على Hmi (0 = إظهار بدء Pb)</value>
+  </data>
+  <data name="COMPONENT ENABLED (NO MANUAL START REQUIRED)" xml:space="preserve">
+    <value>تم تمكين المكون (لا يلزم بدء التشغيل اليدوي)</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS" xml:space="preserve">
+    <value>في انتظار شروط العملية</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
+    <value>في انتظار بدء شروط العملية</value>
+  </data>
+  <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
+    <value>في انتظار توقف وقت الإخلاء</value>
+  </data>
+  <data name="ON TIME IS SET TO ZERO" xml:space="preserve">
+    <value>في الوقت المحدد إلى الصفر</value>
+  </data>
+  <data name="COMMAND GREASE ON" xml:space="preserve">
+    <value>قيادة الشحوم</value>
+  </data>
+  <data name="READY TO START" xml:space="preserve">
+    <value>جاهز للبدء</value>
+  </data>
+  <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
+    <value>تشغيل كامل (موافق للعملية)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>إنذار حرج موجود</value>
+  </data>
+  <data name="DEBALER IN AUTO" xml:space="preserve">
+    <value>Debaler في السيارات</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO (EXTERNAL PLANT)" xml:space="preserve">
+    <value>Debaler ليس في تلقائي (مصنع خارجي)</value>
+  </data>
+  <data name="DEBALER FAULTY STATUS" xml:space="preserve">
+    <value>وضع Debaler الخاطئ</value>
+  </data>
+  <data name="DEBALER NOT RUNNING" xml:space="preserve">
+    <value>Debaler لا يعمل</value>
+  </data>
+  <data name="DEBALER STARTED AND ACTIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>بدأ Debaler ونشط (إشارة خارجية)</value>
+  </data>
+  <data name="EXTERNAL INPUT" xml:space="preserve">
+    <value>المدخلات الخارجية</value>
+  </data>
+  <data name="(1=STARTED AND ACTIVE)" xml:space="preserve">
+    <value>(1 = بدأ ونشط)</value>
+  </data>
+  <data name="DEBALER IN AUTO MODE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Debaler في الوضع التلقائي (إشارة خارجية)</value>
+  </data>
+  <data name="DEBALER STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>حالة Debaler جيدة (إشارة خارجية)</value>
+  </data>
+  <data name="(1=NO FAULTS)" xml:space="preserve">
+    <value>(1 = لا أخطاء)</value>
+  </data>
+  <data name="DEBALER START REQUEST" xml:space="preserve">
+    <value>طلب بدء Debaler</value>
+  </data>
+  <data name="EXTERNAL OUTPUT" xml:space="preserve">
+    <value>الإخراج الخارجي</value>
+  </data>
+  <data name="(1=START REQUEST)" xml:space="preserve">
+    <value>(1 = بدء الطلب)</value>
+  </data>
+  <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
+    <value>تأكيد طلب بدء Debaler</value>
+  </data>
+  <data name="(1=CONFIRM START)" xml:space="preserve">
+    <value>(1 = تأكيد البداية)</value>
+  </data>
+  <data name="DEBALER AUTO MODE REQUEST" xml:space="preserve">
+    <value>طلب الوضع التلقائي Debaler</value>
+  </data>
+  <data name="(1=REQUEST AUTO MODE)" xml:space="preserve">
+    <value>(1 = طلب الوضع التلقائي)</value>
+  </data>
+  <data name="CONTROL" xml:space="preserve">
+    <value>مراقبة</value>
+  </data>
+  <data name="SORTING UNIT DISABLED FOR PRODUCTION" xml:space="preserve">
+    <value>وحدة الفرز معطلة للإنتاج</value>
+  </data>
+  <data name="SORTER WARNING PRESENT" xml:space="preserve">
+    <value>تحذير فارز موجود</value>
+  </data>
+  <data name="SORTING UNIT NOT SORTING OK" xml:space="preserve">
+    <value>وحدة الفرز لا فرز طيب</value>
+  </data>
+  <data name="SORTING UNIT  CONTROL ALARM" xml:space="preserve">
+    <value>فرز وحدة التحكم إنذار</value>
+  </data>
+  <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
+    <value>وحدة الفرز في التحكم في الوضع المحلي</value>
+  </data>
+  <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
+    <value>وحدة الفرز ليست على ما يرام</value>
+  </data>
+  <data name="SORTING UNIT - LOCAL ESTOP PUSHBUTTON NOT RESET (STOP BELT)" xml:space="preserve">
+    <value>وحدة الفرز - لم يتم إعادة ضبط زر الإيقاف المحلي (حزام الإيقاف)</value>
+  </data>
+  <data name="SORTING" xml:space="preserve">
+    <value>فرز</value>
+  </data>
+  <data name="SORTING IN PROGRESS" xml:space="preserve">
+    <value>الفرز قيد التقدم</value>
+  </data>
+  <data name="(1=SORTING)" xml:space="preserve">
+    <value>(1 = الفرز)</value>
+  </data>
+  <data name="SORTING STANDBY" xml:space="preserve">
+    <value>فرز الاستعداد</value>
+  </data>
+  <data name="(1=STANDBY)" xml:space="preserve">
+    <value>(1 = الاستعداد)</value>
+  </data>
+  <data name="NO FAULTS" xml:space="preserve">
+    <value>لا أخطاء</value>
+  </data>
+  <data name="SORTER NO FAULTS" xml:space="preserve">
+    <value>فارز لا أخطاء</value>
+  </data>
+  <data name="WARNING PRESENT" xml:space="preserve">
+    <value>تحذير الحاضر</value>
+  </data>
+  <data name="SORTER WARNING" xml:space="preserve">
+    <value>تحذير فارز</value>
+  </data>
+  <data name="(1=WARNING)" xml:space="preserve">
+    <value>(1 = تحذير)</value>
+  </data>
+  <data name="REMOTE MODE" xml:space="preserve">
+    <value>الوضع البعيد</value>
+  </data>
+  <data name="SORTER IN REMOTE MODE" xml:space="preserve">
+    <value>فارز في الوضع البعيد</value>
+  </data>
+  <data name="(1=REMOTE)" xml:space="preserve">
+    <value>(1 = بعيد)</value>
+  </data>
+  <data name="SORTER ON" xml:space="preserve">
+    <value>فارز قيد التشغيل</value>
+  </data>
+  <data name="(1=ON)" xml:space="preserve">
+    <value>(1 = تشغيل)</value>
+  </data>
+  <data name="SORTER LOCAL ESTOP BUTTON" xml:space="preserve">
+    <value>فارز التوقيت المحلي زر</value>
+  </data>
+  <data name="(0=ESTOP PRESSED)" xml:space="preserve">
+    <value>(0 = الضغط على Estop)</value>
+  </data>
+  <data name="DOWNSTREAM FAULTY STATUS" xml:space="preserve">
+    <value>حالة خلل المصب</value>
+  </data>
+  <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
+    <value>Info_Downstr_Status</value>
+  </data>
+  <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>حالة المصب جيدة (إشارة خارجية)</value>
+  </data>
+  <data name="(1=DOWNSTREAM STATUS OK)" xml:space="preserve">
+    <value>(1 = حالة المصب لا بأس بها)</value>
+  </data>
+  <data name="DOWNSTREAM OK TO RECEIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>المصب لا بأس به لتلقي (إشارة خارجية)</value>
+  </data>
+  <data name="LOCAL DISCONNECT NOT OK" xml:space="preserve">
+    <value>قطع الاتصال المحلي ليس جيدًا</value>
+  </data>
+  <data name="PAUSE_TIME" xml:space="preserve">
+    <value>وقفة الوقت</value>
+  </data>
+  <data name="ON_TIME" xml:space="preserve">
+    <value>في الوقت المحدد</value>
+  </data>
+  <data name="BYPASS" xml:space="preserve">
+    <value>تجاوز</value>
+  </data>
+  <data name="OK FOR PROCESS (PLC RUN, ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>حسنًا للمعالجة (Plc Run ، Estop Ok + لا تنبيهات / رسائل)</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
+    <value>إنذار حرج موجود (إذا كان خطأ -&gt; لا يوجد بدء إنتاج)</value>
+  </data>
 </root>
