--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -2208,4 +2208,427 @@
   <data name="WITH DIRECTION" xml:space="preserve">
     <value>有方向</value>
   </data>
+  <data name="HIGH SPEED" xml:space="preserve">
+    <value>高速</value>
+  </data>
+  <data name="LOW SPEED" xml:space="preserve">
+    <value>低速</value>
+  </data>
+  <data name="MENU" xml:space="preserve">
+    <value>菜单</value>
+  </data>
+  <data name="MORE" xml:space="preserve">
+    <value>更多的</value>
+  </data>
+  <data name="CHANGE LANGUAGE" xml:space="preserve">
+    <value>改变语言</value>
+  </data>
+  <data name="SWITCH THEME" xml:space="preserve">
+    <value>切换主题</value>
+  </data>
+  <data name="SWITCH DEVICE NAMES" xml:space="preserve">
+    <value>切换设备名称</value>
+  </data>
+  <data name="DEBUG WINDOW" xml:space="preserve">
+    <value>调试窗口</value>
+  </data>
+  <data name="MINIMIZE PREVU" xml:space="preserve">
+    <value>最小化 Prevu</value>
+  </data>
+  <data name="CLOSE PREVU" xml:space="preserve">
+    <value>关闭</value>
+  </data>
+  <data name="OVERWRITE THE FOLLOWING IMAGE?" xml:space="preserve">
+    <value>覆盖以下图像？</value>
+  </data>
+  <data name="SELECTED VALUES" xml:space="preserve">
+    <value>选定的值</value>
+  </data>
+  <data name="DIFFERENT VALUES" xml:space="preserve">
+    <value>不同的价值观</value>
+  </data>
+  <data name="SAVE AS" xml:space="preserve">
+    <value>另存为</value>
+  </data>
+  <data name="LOAD IMAGE" xml:space="preserve">
+    <value>加载图像</value>
+  </data>
+  <data name="OPEN PROCESS IMAGE" xml:space="preserve">
+    <value>打开过程映像</value>
+  </data>
+  <data name="NO PARAMETERS FOUND WITH ACTIVE FILTERS" xml:space="preserve">
+    <value>未找到有源滤波器的参数</value>
+  </data>
+  <data name="COLLAPSE ALL" xml:space="preserve">
+    <value>全部收缩</value>
+  </data>
+  <data name="TIMES" xml:space="preserve">
+    <value>时代</value>
+  </data>
+  <data name="FAILED TO SEND COMMAND. PLC NOT CONNECTED" xml:space="preserve">
+    <value>发送命令失败。 PLC 未连接</value>
+  </data>
+  <data name="ON COMMAND" xml:space="preserve">
+    <value>ON 命令</value>
+  </data>
+  <data name="WASHING" xml:space="preserve">
+    <value>洗涤</value>
+  </data>
+  <data name="(1=COOLING ON)" xml:space="preserve">
+    <value>（1=冷却开启）</value>
+  </data>
+  <data name="MOTORNOMINALPOWER" xml:space="preserve">
+    <value>电机额定功率</value>
+  </data>
+  <data name="MOTORNOMINALCURRENT" xml:space="preserve">
+    <value>电机额定电流</value>
+  </data>
+  <data name="INVERTERNOMINALOUTCURRENT" xml:space="preserve">
+    <value>逆变器额定输出电流</value>
+  </data>
+  <data name="INVERTERBRAND" xml:space="preserve">
+    <value>逆变器品牌</value>
+  </data>
+  <data name="MAIN FEEDING BELT" xml:space="preserve">
+    <value>主送料带</value>
+  </data>
+  <data name="USAGE" xml:space="preserve">
+    <value>用法</value>
+  </data>
+  <data name="HOURS" xml:space="preserve">
+    <value>小时</value>
+  </data>
+  <data name="FAULTY STATUS (INVERTER NOT RUNNING OK OR INVERTER IN LOCAL MODE)" xml:space="preserve">
+    <value>故障状态（逆变器未正常运行或逆变器处于本地模式）</value>
+  </data>
+  <data name="COOLING FAN OVERLOAD" xml:space="preserve">
+    <value>冷却风扇过载</value>
+  </data>
+  <data name="YOU HAVE UNSAVED CHANGES" xml:space="preserve">
+    <value>您有未保存的更改</value>
+  </data>
+  <data name="WHAT DO YOU WANT TO DO?" xml:space="preserve">
+    <value>你想让我做什么？</value>
+  </data>
+  <data name="DISCARD CHANGES" xml:space="preserve">
+    <value>放弃更改</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON PRESSED" xml:space="preserve">
+    <value>急停按钮按下</value>
+  </data>
+  <data name="SUBZONE IN AUTOMATIC MODE" xml:space="preserve">
+    <value>自动模式下的子区域</value>
+  </data>
+  <data name="SUBZONE IN MAINTENANCE MODE" xml:space="preserve">
+    <value>处于维护模式的子区域</value>
+  </data>
+  <data name="SUBZONE IN DISABLED MODE" xml:space="preserve">
+    <value>子区域处于禁用模式</value>
+  </data>
+  <data name="SUBZONE IN E-STOP MODE" xml:space="preserve">
+    <value>紧急停止模式中的子区域</value>
+  </data>
+  <data name="DISABLING" xml:space="preserve">
+    <value>禁用</value>
+  </data>
+  <data name="SEMIAUTO" xml:space="preserve">
+    <value>半自动</value>
+  </data>
+  <data name="OIL VALVE" xml:space="preserve">
+    <value>油阀</value>
+  </data>
+  <data name="DEBALER BRT STANDARD INTERFACE" xml:space="preserve">
+    <value>Debaler Brt 标准接口</value>
+  </data>
+  <data name="PELLENC BOTTLE SORTER" xml:space="preserve">
+    <value>Pellenc 分瓶机</value>
+  </data>
+  <data name="DOWNSTREAM EXTERNAL MACHINE" xml:space="preserve">
+    <value>下游外机</value>
+  </data>
+  <data name="BELT" xml:space="preserve">
+    <value>腰带</value>
+  </data>
+  <data name="MANUAL SORTING" xml:space="preserve">
+    <value>手动分拣</value>
+  </data>
+  <data name="EXTERNAL GRINDER" xml:space="preserve">
+    <value>外圆磨床</value>
+  </data>
+  <data name="WATCHDOG" xml:space="preserve">
+    <value>看门狗</value>
+  </data>
+  <data name="INCREMENTAL WD COUNTER ( +1 EVERY 100 MS - ROLLOVER AT 30000 )" xml:space="preserve">
+    <value>增量 Wd 计数器（每 100 毫秒 +1 - 在 30000 处翻转）</value>
+  </data>
+  <data name="TRUE= AT LEAST ONE I/O MODULE CONNECTION DETECTED, 0 =SIMULATION ALLOWED" xml:space="preserve">
+    <value>True= 检测到至少一个 I/O 模块连接，0 = 允许模拟</value>
+  </data>
+  <data name="PLC PROGRAM SIMULATION ACTIVE" xml:space="preserve">
+    <value>PLC 程序模拟激活</value>
+  </data>
+  <data name="CABINET TEST ACTIVE" xml:space="preserve">
+    <value>机柜测试活动</value>
+  </data>
+  <data name="ESTOP AREA NOT RESET (WITH ALL ESTOP PBS OK)" xml:space="preserve">
+    <value>Estop 区域未复位（所有 Estop Pbs 正常）</value>
+  </data>
+  <data name="SYS - E-STOP - MASTER RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - 主继电器状态</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP AREA STATUS OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>过程正常（Estop 区域状态正常 + 无警报/消息）</value>
+  </data>
+  <data name="ALL AREA ESTOP PUSH BUTTON NOT PRESSED ( TRUE=OK)" xml:space="preserve">
+    <value>未按下所有区域急停按钮（True=Ok）</value>
+  </data>
+  <data name="ALARM PRESENT" xml:space="preserve">
+    <value>存在警报</value>
+  </data>
+  <data name="NON-CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>存在非严重警报</value>
+  </data>
+  <data name="MESSAGE PRESENT" xml:space="preserve">
+    <value>消息呈现</value>
+  </data>
+  <data name="NEW ALARM PRESENT" xml:space="preserve">
+    <value>新警报出现</value>
+  </data>
+  <data name="EMERGENCY STOP RELAY RESET OK (DIRECT) (OF THIS ESTOP AREA)" xml:space="preserve">
+    <value>紧急停止继电器复位正常（直接）（该急停区域）</value>
+  </data>
+  <data name="SYS - DIGITAL INPUTS" xml:space="preserve">
+    <value>系统 - 数字输入</value>
+  </data>
+  <data name="SYS - DIGITAL OUTPUTS" xml:space="preserve">
+    <value>系统 - 数字输出</value>
+  </data>
+  <data name="SYS - INTERNAL DEVICES" xml:space="preserve">
+    <value>系统 - 内部设备</value>
+  </data>
+  <data name="SYS - EXTERNAL DEVICES" xml:space="preserve">
+    <value>系统 - 外部设备</value>
+  </data>
+  <data name="ETHERNET SWITCH OK" xml:space="preserve">
+    <value>以太网交换机正常</value>
+  </data>
+  <data name="DIGITAL INPUTS OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>数字输入正常（如果 False --&gt; Estop Down）</value>
+  </data>
+  <data name="DIGITAL OUTPUTS OK" xml:space="preserve">
+    <value>数字输出正常</value>
+  </data>
+  <data name="24 VOLTS INTERNAL OK     (IF  FALSE --&gt; ESTOP DOWN)" xml:space="preserve">
+    <value>24 伏内部正常（如果 False --&gt; Estop Down）</value>
+  </data>
+  <data name="24 VOLTS EXTERNAL OK" xml:space="preserve">
+    <value>24 伏外部正常</value>
+  </data>
+  <data name="OK FOR PROCESS (ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>进程确定（Estop 确定 + 无警报/消息）</value>
+  </data>
+  <data name="ESTOP PRESSED (ON HMI)" xml:space="preserve">
+    <value>Estop 按下（在 Hmi 上）</value>
+  </data>
+  <data name="OK FOR PROCESS (EPB OK)" xml:space="preserve">
+    <value>确定流程（Epb 确定）</value>
+  </data>
+  <data name="PULL-CORD SAFETIES" xml:space="preserve">
+    <value>拉绳保险柜</value>
+  </data>
+  <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
+    <value>本地断开连接正常（如果有）</value>
+  </data>
+  <data name="LOCAL SAFETY OK   (IF ANY - E.G. STRAP L.S.)" xml:space="preserve">
+    <value>当地安全没问题（如果有的话 - E.G. Strap L.S.）</value>
+  </data>
+  <data name="HIDE START BUTTON ON HMI  (0=SHOW START PB)" xml:space="preserve">
+    <value>在 Hmi 上隐藏开始按钮（0=显示开始 Pb）</value>
+  </data>
+  <data name="COMPONENT ENABLED (NO MANUAL START REQUIRED)" xml:space="preserve">
+    <value>启用组件（无需手动启动）</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS" xml:space="preserve">
+    <value>等待过程条件</value>
+  </data>
+  <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
+    <value>等待过程条件开始</value>
+  </data>
+  <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
+    <value>等待疏散时间停止</value>
+  </data>
+  <data name="ON TIME IS SET TO ZERO" xml:space="preserve">
+    <value>准时设置为零</value>
+  </data>
+  <data name="COMMAND GREASE ON" xml:space="preserve">
+    <value>命令润滑脂</value>
+  </data>
+  <data name="READY TO START" xml:space="preserve">
+    <value>准备开始</value>
+  </data>
+  <data name="FULL RUNNING (OK FOR PROCESS)" xml:space="preserve">
+    <value>完全运行（过程正常）</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT" xml:space="preserve">
+    <value>存在严重警报</value>
+  </data>
+  <data name="DEBALER IN AUTO" xml:space="preserve">
+    <value>汽车拆包机</value>
+  </data>
+  <data name="DEBALER NOT IN AUTO (EXTERNAL PLANT)" xml:space="preserve">
+    <value>Debaler 不在汽车中（外部工厂）</value>
+  </data>
+  <data name="DEBALER FAULTY STATUS" xml:space="preserve">
+    <value>拆包机故障状态</value>
+  </data>
+  <data name="DEBALER NOT RUNNING" xml:space="preserve">
+    <value>拆包机不运行</value>
+  </data>
+  <data name="DEBALER STARTED AND ACTIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Debaler 启动并激活（外部信号）</value>
+  </data>
+  <data name="EXTERNAL INPUT" xml:space="preserve">
+    <value>外部输入</value>
+  </data>
+  <data name="(1=STARTED AND ACTIVE)" xml:space="preserve">
+    <value>（1=启动并激活）</value>
+  </data>
+  <data name="DEBALER IN AUTO MODE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>自动模式下的剥皮机（外部信号）</value>
+  </data>
+  <data name="DEBALER STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>拆包机状态正常（外部信号）</value>
+  </data>
+  <data name="(1=NO FAULTS)" xml:space="preserve">
+    <value>（1=无故障）</value>
+  </data>
+  <data name="DEBALER START REQUEST" xml:space="preserve">
+    <value>拆包机启动请求</value>
+  </data>
+  <data name="EXTERNAL OUTPUT" xml:space="preserve">
+    <value>外部输出</value>
+  </data>
+  <data name="(1=START REQUEST)" xml:space="preserve">
+    <value>(1=开始请求)</value>
+  </data>
+  <data name="DEBALER START REQUEST CONFIRM" xml:space="preserve">
+    <value>拆包机启动请求确认</value>
+  </data>
+  <data name="(1=CONFIRM START)" xml:space="preserve">
+    <value>(1=确认开始)</value>
+  </data>
+  <data name="DEBALER AUTO MODE REQUEST" xml:space="preserve">
+    <value>拆包机自动模式请求</value>
+  </data>
+  <data name="(1=REQUEST AUTO MODE)" xml:space="preserve">
+    <value>（1=请求自动模式）</value>
+  </data>
+  <data name="CONTROL" xml:space="preserve">
+    <value>控制</value>
+  </data>
+  <data name="SORTING UNIT DISABLED FOR PRODUCTION" xml:space="preserve">
+    <value>分拣单元因生产而禁用</value>
+  </data>
+  <data name="SORTER WARNING PRESENT" xml:space="preserve">
+    <value>存在分拣机警告</value>
+  </data>
+  <data name="SORTING UNIT NOT SORTING OK" xml:space="preserve">
+    <value>排序单元未排序正常</value>
+  </data>
+  <data name="SORTING UNIT  CONTROL ALARM" xml:space="preserve">
+    <value>分拣单元控制报警</value>
+  </data>
+  <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
+    <value>本地模式控制中的分拣单元</value>
+  </data>
+  <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
+    <value>分拣单元不正常</value>
+  </data>
+  <data name="SORTING UNIT - LOCAL ESTOP PUSHBUTTON NOT RESET (STOP BELT)" xml:space="preserve">
+    <value>分拣单元 - 本地急停按钮未复位（停止带）</value>
+  </data>
+  <data name="SORTING" xml:space="preserve">
+    <value>排序</value>
+  </data>
+  <data name="SORTING IN PROGRESS" xml:space="preserve">
+    <value>排序中</value>
+  </data>
+  <data name="(1=SORTING)" xml:space="preserve">
+    <value>（1=排序）</value>
+  </data>
+  <data name="SORTING STANDBY" xml:space="preserve">
+    <value>分拣待机</value>
+  </data>
+  <data name="(1=STANDBY)" xml:space="preserve">
+    <value>（1=待机）</value>
+  </data>
+  <data name="NO FAULTS" xml:space="preserve">
+    <value>无故障</value>
+  </data>
+  <data name="SORTER NO FAULTS" xml:space="preserve">
+    <value>分拣机无故障</value>
+  </data>
+  <data name="WARNING PRESENT" xml:space="preserve">
+    <value>存在警告</value>
+  </data>
+  <data name="SORTER WARNING" xml:space="preserve">
+    <value>分拣机警告</value>
+  </data>
+  <data name="(1=WARNING)" xml:space="preserve">
+    <value>(1=警告)</value>
+  </data>
+  <data name="REMOTE MODE" xml:space="preserve">
+    <value>远程模式</value>
+  </data>
+  <data name="SORTER IN REMOTE MODE" xml:space="preserve">
+    <value>远程模式下的分拣机</value>
+  </data>
+  <data name="(1=REMOTE)" xml:space="preserve">
+    <value>（1=远程）</value>
+  </data>
+  <data name="SORTER ON" xml:space="preserve">
+    <value>分拣机开启</value>
+  </data>
+  <data name="(1=ON)" xml:space="preserve">
+    <value>（1=开）</value>
+  </data>
+  <data name="SORTER LOCAL ESTOP BUTTON" xml:space="preserve">
+    <value>分拣机本地急停按钮</value>
+  </data>
+  <data name="(0=ESTOP PRESSED)" xml:space="preserve">
+    <value>（0=Estop 按下）</value>
+  </data>
+  <data name="DOWNSTREAM FAULTY STATUS" xml:space="preserve">
+    <value>下游故障状态</value>
+  </data>
+  <data name="INFO_DOWNSTR_STATUS" xml:space="preserve">
+    <value>Info_Downstr_Status</value>
+  </data>
+  <data name="DOWNSTREAM STATUS OK (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>下游状态正常（外部信号）</value>
+  </data>
+  <data name="(1=DOWNSTREAM STATUS OK)" xml:space="preserve">
+    <value>(1=下游状态正常)</value>
+  </data>
+  <data name="DOWNSTREAM OK TO RECEIVE (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>下游可以接收（外部信号）</value>
+  </data>
+  <data name="LOCAL DISCONNECT NOT OK" xml:space="preserve">
+    <value>本地断开连接不正常</value>
+  </data>
+  <data name="PAUSE_TIME" xml:space="preserve">
+    <value>暂停时间</value>
+  </data>
+  <data name="ON_TIME" xml:space="preserve">
+    <value>准时</value>
+  </data>
+  <data name="BYPASS" xml:space="preserve">
+    <value>旁路</value>
+  </data>
+  <data name="OK FOR PROCESS (PLC RUN, ESTOP OK + NO ALARMS/MESSAGES)" xml:space="preserve">
+    <value>过程确定（Plc 运行，Estop 确定 + 无警报/消息）</value>
+  </data>
+  <data name="CRITICAL ALARM PRESENT    (IF  FALSE --&gt; NO  PROD START)" xml:space="preserve">
+    <value>存在严重警报（如果 False --&gt; 无 Prod 启动）</value>
+  </data>
 </root>
